[package]
name = "d7050e"
version = "0.1.0"
authors = ["mark"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0.1"
derive_more = "0.15.0"
nom_locate = "1.0.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0" }
